# aints

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Brain.cpp  Brain.h  CMakeLists.txt  Neuron.cpp  Neuron.h  aints.cpp  aints.h  main.cpp  world.cpp  world.h
include/: Brain.h  MapSearchNode.h  Neuron.h  Tile.h  aints.h  aints_types.h  block.h  brain.h  mapsearchnode.h  moveneuron.h  neuron.h  tile.h  world.h
src/: Brain.cpp  MapSearchNode.cpp  Neuron.cpp  Tile.cpp  aints.cpp  brain.cpp  mapsearchnode.cpp  moveneuron.cpp  neuron.cpp  tile.cpp  world.cpp
src/tests/: aints_test.cpp
